--- a/HedgeModManager/App.xaml
+++ b/HedgeModManager/App.xaml
@@ -1,9 +1,103 @@
 ﻿<Application x:Class="HedgeModManager.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:HedgeModManager"
-             StartupUri="MainWindow.xaml">
+             xmlns:local="clr-namespace:HedgeModManager">
     <Application.Resources>
+        <Style TargetType="ListView">
+            <Setter Property="Background" Value="#FF2D2D30"/>
+        </Style>
+        <Style x:Key="HedgeWindow" TargetType="{x:Type Window}">
+            <Setter Property="WindowChrome.WindowChrome">
+                <Setter.Value>
+                    <WindowChrome 
+                        CaptionHeight="22"
+                        CornerRadius="0" 
+                        GlassFrameThickness="1"
+                        NonClientFrameEdges="None"
+                        ResizeBorderThickness="4"
+                        UseAeroCaptionButtons="False" />
+                </Setter.Value>
+            </Setter>
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="Window">
+                        <Grid Background="#FF2D2D30" Loaded="Window_Loaded">
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="22"/>
+                                <RowDefinition Height="*"/>
+                            </Grid.RowDefinitions>
+                            <Image Width="22" Height="22" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="2,2,0,0" Source="Resources/Graphics/icon256.png"/>
+                            <Label Content="{TemplateBinding Title}" Height="33" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="32,0,0,0" Foreground="#FFA4A4A4"/>
+                            <StackPanel Orientation="Horizontal" VerticalAlignment="Top" HorizontalAlignment="Right" WindowChrome.IsHitTestVisibleInChrome="True">
+                                <Button Name="MinBtn" Style="{DynamicResource WindowFrameButton}" Click="Minimize_Click">
+                                    <Image Width="25" Height="25" Source="Resources/Graphics/IMG_FRAME_M.png"/>
+                                </Button>
+                                <Button Name="MaxBtn" Style="{DynamicResource WindowFrameButton}" Click="MaxBtn_Click">
+                                    <Image Width="25" Height="25" Source="Resources/Graphics/IMG_FRAME_MM.png"/>
+                                </Button>
+                                <Button Name="CloseBtn" Style="{DynamicResource WindowFrameButton}" Click="Close_Click">
+                                    <Image Width="35" Height="25" Source="Resources/Graphics/IMG_FRAME_C.png"/>
+                                </Button>
+                            </StackPanel>
+                            <Grid Grid.Row="1">
+                                <ContentPresenter/>
+                            </Grid>
+                        </Grid>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+        <Style TargetType="{x:Type Border}" x:Key="WindowFrame">
+            <Setter Property="BorderBrush" Value="#FF0066CC"/>
+            <Setter Property="Background" Value="#FF2D2D30"/>
+            <Setter Property="BorderThickness" Value="1"/>
+        </Style>
+        <Style TargetType="{x:Type Button}" x:Key="WindowFrameButton">
+            <Setter Property="Width" Value="35"/>
+            <Setter Property="Height" Value="25"/>
+            <Setter Property="BorderThickness" Value="0"/>
+            <Setter Property="Background" Value="Transparent"/>
+            <Setter Property="BorderBrush" Value="Transparent"/>
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="{x:Type Button}">
+                        <Border x:Name="border" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}" Background="{TemplateBinding Background}" SnapsToDevicePixels="true">
+                            <ContentPresenter x:Name="contentPresenter" Focusable="False" HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}" Margin="{TemplateBinding Padding}" RecognizesAccessKey="True" SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" VerticalAlignment="{TemplateBinding VerticalContentAlignment}"/>
+                        </Border>
+                        <ControlTemplate.Triggers>
+                            <Trigger Property="IsDefaulted" Value="true">
+                                <Setter Property="BorderBrush" TargetName="border" Value="{DynamicResource {x:Static SystemColors.HighlightBrushKey}}"/>
+                            </Trigger>
+                            <Trigger Property="IsMouseOver" Value="true">
+                                <Setter Property="Background" TargetName="border" Value="#FF3F3F41"/>
+                                <Setter Property="BorderBrush" TargetName="border" Value="Transparent"/>
+                            </Trigger>
+                            <Trigger Property="IsPressed" Value="true">
+                                <Setter Property="Background" TargetName="border" Value="#FF3F3F41"/>
+                                <Setter Property="BorderBrush" TargetName="border" Value="Transparent"/>
+                            </Trigger>
+                            <Trigger Property="IsEnabled" Value="false">
+                                <Setter Property="Opacity" Value="0.57"/>
+                            </Trigger>
+                        </ControlTemplate.Triggers>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+            <Style.Triggers>
+                <Trigger Property="IsMouseOver" Value="True">
+                    <Setter Property="Background" Value="#FF3F3F41" />
+                </Trigger>
+                <Trigger Property="IsPressed" Value="True">
+                    <Setter Property="Background" Value="#FF3F3F41" />
+                </Trigger>
+            </Style.Triggers>
+        </Style>
+        <Style x:Key="Grip" TargetType="Rectangle">
+            <Setter Property="Focusable" Value="False" />
+            <Setter Property="Fill" Value="Transparent" />
+            <Setter Property="Tag" Value="{Binding RelativeSource={RelativeSource AncestorType=Window}}" />
+        </Style>
+
         <Style TargetType="ProgressBar">
             <Setter Property="Background" Value="#FF2D2D30"/>
             <Setter Property="Foreground" Value="#0066CC"/>
