--- a/HedgeModManager/AboutWindow.xaml
+++ b/HedgeModManager/AboutWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:HedgeModManager"
         mc:Ignorable="d"
-        Title="About HedgeModManager" Height="440" Width="500"  Background="#FF2D2D30"
+        Title="About Hedge Mod Manager" Height="440" Width="500"  Background="#FF2D2D30"
         WindowStartupLocation="CenterScreen" ResizeMode="NoResize" Style="{StaticResource HedgeWindow}">
     <Grid>
         <Grid.RowDefinitions>
@@ -14,10 +14,8 @@
             <RowDefinition Height="*"/>
             <RowDefinition Height="30"/>
         </Grid.RowDefinitions>
-        <StackPanel Orientation="Horizontal">
-            <Image HorizontalAlignment="Left" VerticalAlignment="Top" Width="64" Height="64" Source="Resources/Graphics/icon256.png"/>
-            <Label Content="HedgeModManager" HorizontalAlignment="Left" VerticalAlignment="Top" Height="Auto" Width="Auto" FontSize="36"/>
-        </StackPanel>
+        <Image HorizontalAlignment="Left" VerticalAlignment="Top" Width="64" Height="64" Source="Resources/Graphics/icon256.png"/>
+        <Label Content="Hedge Mod Manager" HorizontalAlignment="Center" VerticalAlignment="Top" Height="Auto" Width="Auto" FontSize="36"/>
         <Label Content="A program designed to help people easily load Hedgehog Engine mods." HorizontalAlignment="Center" VerticalAlignment="Top" Grid.Row="1"/>
         <Label Content="Requires a legally owned version of one of the supported games." HorizontalAlignment="Center" Margin="0,20,0,0" VerticalAlignment="Top" Grid.Row="1"/>
         <GroupBox Header="Credits:" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Grid.Row="2" Margin="15">
