--- a/HedgeModManager/App.xaml
+++ b/HedgeModManager/App.xaml
@@ -18,8 +18,8 @@
         <SolidColorBrush x:Key="ScrollBar.MouseOver.Thumb" Color="#A6A6A6"/>
         <SolidColorBrush x:Key="ScrollBar.Pressed.Thumb" Color="#606060"/>
         <SolidColorBrush x:Key="ScrollBar.Static.Thumb" Color="#CDCDCD"/>
-        
-        <DropShadowEffect x:Key="HoverEffect" BlurRadius="5" Color="Aqua"/>
+
+        <DropShadowEffect x:Key="HoverEffect" BlurRadius="5" Color="#FF8ED0F9" Opacity="0" Direction="0" ShadowDepth="0"/>
         <Style TargetType="ListView">
         <Setter Property="Background" Value="#FF2D2D30"/>
         </Style>
@@ -135,6 +135,7 @@
             <Setter Property="Foreground" Value="#FFFFFFFF"/>
             <Setter Property="MinHeight"             Value="20px" />
             <Setter Property="MinWidth"              Value="20px" />
+            <Setter Property="Effect"                Value="{StaticResource HoverEffect}"/>
             <Setter Property="Template">
                 <Setter.Value>
                     <ControlTemplate TargetType="GroupBox">
@@ -154,6 +155,30 @@
                     </ControlTemplate>
                 </Setter.Value>
             </Setter>
+            <Style.Triggers>
+                <Trigger Property="IsMouseOver" Value="True">
+                    <Trigger.EnterActions>
+                        <BeginStoryboard>
+                            <Storyboard>
+                                <DoubleAnimationUsingKeyFrames BeginTime="00:00:00" 
+                          Storyboard.TargetProperty="(Effect).Opacity">
+                                    <SplineDoubleKeyFrame KeyTime="0:0:0.3" Value="0.5"/>
+                                </DoubleAnimationUsingKeyFrames>
+                            </Storyboard>
+                        </BeginStoryboard>
+                    </Trigger.EnterActions>
+                    <Trigger.ExitActions>
+                        <BeginStoryboard>
+                            <Storyboard>
+                                <DoubleAnimationUsingKeyFrames BeginTime="00:00:00" 
+                          Storyboard.TargetProperty="(Effect).Opacity">
+                                    <SplineDoubleKeyFrame KeyTime="0:0:0.2" Value="0"/>
+                                </DoubleAnimationUsingKeyFrames>
+                            </Storyboard>
+                        </BeginStoryboard>
+                    </Trigger.ExitActions>
+                </Trigger>
+            </Style.Triggers>
         </Style>
         <Style TargetType="TabItem">
             <Setter Property="Background" Value="#FF007ACC"/>
